# RAG-Chatbot

./: .env.example  .gitignore  CLAUDE.md  METADATA_ENRICHMENT_PLAN.md  Presentasi.pptx  README.md  data.ipynb  dokumentasi.md
loramodel/: adapter_config.json
src/app/: __init__.py  config.py  logger.yaml  main.py  pyproject.toml
src/app/api/: __init__.py  dependencies.py
src/app/api/routes/: auth.py  generation.py  health.py  ingestion.py  retrieval.py
src/app/core/: __init__.py
src/app/core/generation/: __init__.py  llm_client.py  prompt_builder.py  response_parser.py
src/app/core/orchestration/: __init__.py  metadata_enrichment.py  ner_service.py  query_processor.py  rag_chain.py
src/app/core/pipeline/: __init__.py  chunker.py  document_loader.py  embedder.py  language_detect.py  ner_extractor.py  ranker.py  text_splitter.py
src/app/core/retrieval/: __init__.py  reranker.py  vector_store.py
src/app/entity/: __init__.py  base.py  chat_message.py  chat_session.py  rag_traces.py  user.py
src/app/models/: __init__.py  documents.py  requests.py  responses.py
src/app/services/: __init__.py  auth_service.py  cache.py  chat_history_service.py  rag_chain.py  storage.py  vector_db.py
src/app/utils/: __init__.py  exceptions.py  logger.py  telemetry.py
src/backend/: .env.example  api.py  eval_results_20260512_183741.json  eval_results_20260612_193225.json  evaluate_rag.py  exception.py  logger.py  logger.yaml  main.py  pyproject.toml
src/backend/auth/: controller.py  dependencies.py  models.py  service.py
src/backend/chat/: controller.py  core.py  history.py  models.py  router.py  service.py
src/backend/chat/prompt/: classification.txt  generalist.txt  specialist.txt
src/backend/entity/: __init__.py  base.py  chat_history.py  chat_message.py  user.py
src/backend/file_mgt/: controller.py  models.py  service.py
src/backend/scripts/: download_model.py  ingest_corpus.py
src/backend/vectordb/: core.py  custom_embeddings.py  reranker.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.tsx
src/frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx
src/frontend/src/contexts/: AuthContext.tsx
src/frontend/src/pages/: Chat.tsx  Files.tsx  Home.tsx  Login.tsx  Register.tsx
tools/: batch_ingest.py
