[project]
name = "rag-chatbot-app"
version = "2.0.0"
description = "RAG Chatbot with local hybrid search and reranker capabilities (refactored backend)"
readme = "README.md"
requires-python = "==3.11.15"
dependencies = [
    "aiosqlite>=0.21.0",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.136.1",
    "flagembedding==1.3.5",
    "huggingface-hub>=0.34.0,<1.0",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=0.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=1.1.2",
    "pdfminer-six>=20260107",
    "pwdlib[argon2]>=0.3.0",
    "protobuf>=3.19.0,<4.0.0", 
    "pydantic>=2.13.4",
    "pydantic-settings>=2.8.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
    "torch>=2.11.0",
    "transformers>=4.47.0,<5.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "api", "api.routes",
    "core", "core.generation", "core.orchestration", "core.pipeline", "core.retrieval",
    "entity",
    "models",
    "services",
    "utils",
]

[tool.fastapi]
entrypoint = "app.main:app"