[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "huggingface-hub>=1.14.0",
    "langchain-text-splitters>=1.1.2",
    "pdfminer-six>=20260107",
    "pydantic>=2.13.4",
]
