[project]
name = "backend"
version = "0.1.0"
description = "RAG Chatbot with local hybrid search and reranker capabilities"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.1",
    "flagembedding==1.3.5",
    "huggingface-hub>=0.34.0,<1.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "pdfminer-six>=20260107",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.8.0",
    "pyyaml>=6.0.1",
    "rank-bm25>=0.2.2",
    "transformers>=4.47.0,<5.0.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy[asyncio]>=2.0.38",
    "tiktoken>=0.13.0",
    "torch>=2.11.0"
]

# 1. Define the PyTorch CUDA 12.8 index
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# 2. Tell uv to use this index for torch
[tool.uv.sources]
torch = { index = "pytorch-cu128" }

# If you also need torchvision or torchaudio, uncomment these:
# torchvision = { index = "pytorch-cu128" }
# torchaudio = { index = "pytorch-cu128" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["auth", "chat", "data", "entity", "file_mgt", "vectordb"]
